[gd_scene load_steps=12 format=3 uid="uid://c2cjlmq0ogrn5"]

[ext_resource type="Script" uid="uid://rqf1i6gefqrx" path="res://scripts/game.gd" id="1_78awf"]
[ext_resource type="Texture2D" uid="uid://clllj1wacl6sl" path="res://assets/background.png" id="1_ibkli"]
[ext_resource type="Texture2D" uid="uid://cchplbtfiop1r" path="res://assets/ground.png" id="2_qbsmt"]
[ext_resource type="Script" uid="uid://tl21xek1mm8j" path="res://scripts/drop_zone.gd" id="4_s0nni"]
[ext_resource type="FontFile" uid="uid://bu7rb6jlkqmcu" path="res://assets/LilitaOne-Regular-NotoSans-Black.ttf" id="6_aug50"]
[ext_resource type="Script" uid="uid://b8aeotarosvhj" path="res://scripts/label.gd" id="7_kiw3p"]
[ext_resource type="Texture2D" uid="uid://b33q638dgxt6w" path="res://assets/menu.tres" id="8_400sg"]
[ext_resource type="AudioStream" uid="uid://bqt5dh3nfl3vi" path="res://assets/time_for_adventure.mp3" id="9_g4kob"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpr0p"]
size = Vector2(1423, 89)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_78awf"]
distance = -501.484

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0nni"]
size = Vector2(57.5658, 115.057)

[node name="Game" type="Node2D"]
script = ExtResource("1_78awf")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(398, 883)
scale = Vector2(1, 1.44)
texture = ExtResource("1_ibkli")

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2(519, 2469)
scale = Vector2(2, 1.982)
texture = ExtResource("2_qbsmt")

[node name="Limit Line" type="Area2D" parent="."]
position = Vector2(-27, 323)
collision_mask = 2
script = ExtResource("4_s0nni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limit Line"]
position = Vector2(543, 189)
shape = SubResource("RectangleShape2D_cpr0p")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(512, 1891)
scale = Vector2(-0.253015, 0.00882043)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, -48)
shape = SubResource("WorldBoundaryShape2D_78awf")

[node name="Left_Wall" type="StaticBody2D" parent="."]
position = Vector2(-42, 366)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Wall"]
position = Vector2(-7.5, 745.7)
scale = Vector2(1.52, 15.76)
shape = SubResource("RectangleShape2D_s0nni")

[node name="Right_Wall" type="StaticBody2D" parent="."]
position = Vector2(1078, 407)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Wall"]
position = Vector2(42, 704)
scale = Vector2(1.52, 15.76)
shape = SubResource("RectangleShape2D_s0nni")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 790.0
offset_top = 126.0
offset_right = 879.0
offset_bottom = 232.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 252.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("6_aug50")
theme_override_font_sizes/font_size = 100
text = "Score 
00"
horizontal_alignment = 1
script = ExtResource("7_kiw3p")

[node name="Menu" type="Button" parent="."]
offset_left = 41.0
offset_top = 152.0
offset_right = 166.0
offset_bottom = 272.0
icon = ExtResource("8_400sg")

[node name="GameAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(19, 14)
stream = ExtResource("9_g4kob")
volume_db = 0.5
autoplay = true

[node name="CheckFruit" type="Timer" parent="."]

[connection signal="body_entered" from="Limit Line" to="." method="_on_drop_zone_body_entered"]
[connection signal="body_exited" from="Limit Line" to="." method="_on_drop_zone_body_exited"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="CheckFruit" to="." method="_on_check_fruit_timeout"]
